--- a/styles.css
+++ b/styles.css
@@ -16,4 +16,97 @@ body {
     rgba(175, 103, 233, 1) 0%,
     rgba(101, 101, 231, 1) 100%
   );
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+
+.faqCard {
+  background-color: white;
+  border-radius: 20px;
+  height: 500px;
+  width: 80%;
+  display: flex
+}
+
+.faqCard__illustration {
+  flex: .5;
+  height: 100%;
+  width: 100%;
+  position: relative;
+}
+
+.faqCard__illustration > img {
+  position: absolute;
+}
+
+.woman {
+  top: 70px;
+  left: -75px;
+  z-index: 2;
+}
+
+.box {
+  top: 200px;
+  left: -120px;
+  z-index: 3;
+}
+
+.shadow {
+  left: -420px;
+  top: -200px;
+  object-fit: contain;
+  /* width: 700px; */
+  height: 800px;
+  z-index: 1;
+}
+
+.faqCard__right {
+  flex: .5;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+
+.faqCard__questions {
+  width: 80%;
+}
+
+h1 {
+  margin-bottom: 30px;
+}
+
+.question {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 20px;
+  margin-top: 10px;
+}
+
+.question > img {
+  object-fit: contain;
+}
+
+
+hr {
+  border: none;
+  border-bottom: solid 1px gray;
+}
+
+#arrow-input {
+  display: none;
+}
+
+#arrow-input:checked + .answer {
+  display: initial;
+}
+
+.answer {
+  display: none;
 }
